# sfizz-juce

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  TODO.md  build.sh  innosetup.iss  sfizz.jucer
Builds/: build.sh  make-appimg.sh
Builds/CodeBlocksLinux/: resources.rc  sfizz.cbp  sfizz.layout
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Builds/MacOSX/sfizz.xcodeproj/: project.pbxproj
Builds/MacOSX/sfizz.xcodeproj/xcshareddata/xcschemes/: sfizz - All.xcscheme
Builds/Qt/SharedCode/: SharedCode.pro
Builds/Qt/StandalonePlugin/: StandalonePlugin.pro
Builds/VisualStudio2017/: resources.rc  sfizz.sln  sfizz_SharedCode.vcxproj  sfizz_SharedCode.vcxproj.filters  sfizz_StandalonePlugin.vcxproj  sfizz_VST3.vcxproj
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: Buffer.h  JuceHelpers.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SfzBlockEnvelope.h  SfzCCEnvelope.h  SfzContainer.h  SfzDefaults.h  SfzEnvelope.h  SfzFilePool.h  SfzGlobals.h  SfzOpcode.h  SfzRegion.cpp  SfzRegion.h  SfzSynth.cpp  SfzSynth.h  SfzVoice.cpp  SfzVoice.h  StdStringTrimmers.h
Source/hiir/test/: AlignedObject.h  AlignedObject.hpp  BlockSplitter.h  FileOp.cpp  FileOp.h  ResultCheck.cpp  ResultCheck.h  SpeedTester.h  SpeedTester.hpp  SpeedTesterBase.cpp  SpeedTesterBase.h  SweepingSine.cpp  SweepingSine.h  TestAllClassesFnc.h  TestAllClassesFnc.hpp  TestAllClassesSpeed.h  TestAllClassesSpeed.hpp  TestDownsampler2x.h  TestDownsampler2x.hpp  TestDownsampler2x4.h  TestDownsampler2x4.hpp  TestPhaseHalfPi.h  TestPhaseHalfPi.hpp  TestUpsampler2x.h  TestUpsampler2x.hpp  TestUpsampler2x4.h  TestUpsampler2x4.hpp  TimerAccurate.h  conf.h  main.cpp
Tests/: BlockEnvelopeTest.cpp  CCEnvelopeTest.cpp  FileTests.cpp  OpcodeTests.cpp  RegexTests.cpp  RegionActivationTests.cpp  RegionBuildTests.cpp  RegionTriggers.cpp  TrimViewTests.cpp
bundle/linux/: sfizz.desktop
docs/: README.md  _config.yml  index.md  status.md
docs/_data/locale/en/: layout.yml
docs/_posts/: 2019-06-03-documentation-website.md
docs/assets/ico/: browserconfig.xml  site.webmanifest
resources/icons/: icon.icns
resources/linux/: sfizz.appdata.xml
